--- a/src/app/main/digital-certificate/digital-certificate.component.html
+++ b/src/app/main/digital-certificate/digital-certificate.component.html
@@ -3,37 +3,27 @@
     <div class="col-md-3" *ngIf="isQLDC_03">
       <div>{{'notation' | translate}}</div>
       <div class="input-line">
-        <input type="text" [(ngModel)]="FileName" class="input_text"/>
+        <input type="text" [(ngModel)]="fileName" class="input_text"/>
       </div>
     </div>
     <div class="col-md-3" *ngIf="isQLDC_03">
       <div>{{'contract.status' | translate}}</div>
       <div>
-          <!-- <p-treeSelect
-            placeholder="{{'all' | translate}}"
-            [droppable]="true">
-            [options]="listStatus"
-
-          </p-treeSelect> -->
           <p-treeSelect placeholder="{{'all' | translate}}"
           [options]="listStatus"
-          [value]="status"
           [(ngModel)]="status">
           </p-treeSelect>
       </div>
     </div>
 
     <div class="col-md-3 btn_search">
-      <button *ngIf="isQLDC_03" class="btn btn-lg btn-block btn_submit" (click)="searchUser()">{{'btn.search' | translate }}</button>
-        <!-- <a *ngIf="isQLND_01" class="btn btn-lg btn-block btn_submit" [routerLink]="['/main/form-user/add']" (click)="addUser()">
-          {{'btn.add' | translate }}
-        </a> -->
+      <button *ngIf="isQLDC_03" class="btn btn-lg btn-block btn_submit" (click)="getFirstPageSearchData()">{{'btn.search' | translate }}</button>
         <button *ngIf="isQLDC_01" class="btn btn-lg btn-block btn_submit" (click)="addUnit()">{{'btn.add' | translate }}</button>
     </div>
   </div>
 
   <div class="row" style="padding-top: 20px;">
-    <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true" [(first)]="first">
+    <p-table [value]="list" [paginator]="true" [lazy]="true" (onLazyLoad)="getPageableCert($event)" [totalRecords]="totalRecords" [rows]="size" id="table" [autoLayout]="true" [(first)]="first">
       <ng-template pTemplate="header" let-columns>
         <tr>
             <th *ngFor="let col of cols" [style]='col.style'>
@@ -50,7 +40,6 @@
               <td *ngIf="list.status == 1">{{'unit.active' | translate}}</td>
               <td *ngIf="list.status != 1">{{'unit.inactive' | translate}}</td>
               <td style="text-align: center">
-                <!-- <i class="fa" [ngClass]="{'fa-eye-slash': !fieldTextType1,'fa-eye': fieldTextType1}" style="color: #106DB6;"></i> -->
                 <i class="fa" [ngClass]="'fa-eye'" style="color: #106DB6;width: 25%;cursor: pointer;" (click)="detailUser(list.id)"></i>
                 <img *ngIf="isQLDC_02 && isQLDC_04" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
               </td>
