--- a/src/app/main/contract-signature/dialog/dialog-sign-many-component/dialog-sign-many-component.component.html
+++ b/src/app/main/contract-signature/dialog/dialog-sign-many-component/dialog-sign-many-component.component.html
@@ -8,7 +8,7 @@
         </div>
       </div>
 
-      <div class="name-item" style="padding-top: 10px;">
+      <div *ngIf="!this.mobile" class="name-item" style="padding-top: 10px;">
         <div style="font-size: 14px">{{'stamp.contract.questions' | translate}}
         </div>
         <div style="padding-top: 2px;">
