--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -13,28 +13,17 @@
 </div>
 
 <!-- && !signTemplate && so tai lieu -->
-<div class="text-sign-not-template-contract-code" *ngIf="(sign.sign_unit == 'so_tai_lieu') && !signTemplate">
+<div class="text-sign-not-template-text" *ngIf="(sign.sign_unit == 'so_tai_lieu') && !signTemplate">
   <span [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{getText(sign)}}</span>
 </div>
 
-<div class="text-sign" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && signTemplate">
-  <span *ngIf="getSpecifiedHandle()" [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{getText(sign)}}</span>
+<div [ngStyle]="getStyleText(sign)" class="text-sign" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && signTemplate">
+  <span *ngIf="getSpecifiedHandle()" class="font-style" id="input-text">{{getText(sign)}}</span>
 
-  <!-- <input *ngIf="sign.sign_unit == 'text' && sign.is_have_text" id="input-text-value" placeholder="Nhập nội dung Text.."
-    [(ngModel)]="sign.value" type="text" (click)="reverseInput($event)" (blur)="changeInput($event)" (ngxInputSearch)="doTheSearch($event,'text')"> -->
+  <input *ngIf="sign.sign_unit == 'text' && sign.is_have_text" id="input-text-value" placeholder="Nhập nội dung Text.."
+    [(ngModel)]="sign.value" type="text" (click)="reverseInput($event)" (blur)="changeInput($event)" (ngxInputSearch)="doTheSearch($event,'text')">
 
-    <div *ngIf="sign.sign_unit == 'text' && sign.is_have_text">
-      <textarea *ngIf="sign.text_type != 'currency'" id="input-text-value" placeholder="Nhập nội dung Text.." [(ngModel)]="sign.value"
-        (ngxInputSearch)="doTheSearch($event,'text')"></textarea>
-        <textarea *ngIf="sign.text_type == 'currency'" id="input-text-value" placeholder="Nhập số tiền.." [(ngModel)]="sign.value"
-        (click)="reverseInput($event)" (blur)="changeInput($event)" oninput="this.value = this.value.replace(/\D/g, '');" (ngxInputSearch)="doTheSearch($event,'text')"></textarea>
-    </div>
-
-  <input *ngIf="getNotSpecifiedYetHandle() && this.contractNo" id="input-number-value"
+  <input *ngIf="getNotSpecifiedYetHandle()" id="input-number-value"
     (focusout)="focusOutFunction()" [(ngModel)]="this.contractNo" placeholder="Nhập số hợp đồng.." type="text"
-    (ngxInputSearch)="doTheSearch($event,'contractNo')">
-
-  <input *ngIf="getNotSpecifiedYetHandle() && !this.contractNo" id="input-number-value"
-    (focusout)="focusOutFunction()" [(ngModel)]="sign.value" placeholder="Nhập số hợp đồng.." type="text"
     (ngxInputSearch)="doTheSearch($event,'contractNo')">
 </div>
