fix lỗi không hiển thị ảnh con dấu khi có chữ ký

--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -133,7 +133,7 @@
                             </div>
                         </div>
                         <div class="image-div">
-                            <img *ngIf="imgSignPCSelect" [src]="imgSignPCSelectMark" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
+                            <img *ngIf="imgSignPCSelectMark" [src]="imgSignPCSelectMark" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
                             <img class="hidden_img" (click)="addFileAttach('mark')" src="assets/img/img-icon.svg" width="30" height="30" />
                         </div>
                     </div>
