--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -15,9 +15,9 @@
     </div>
 
     <div class="col-md-3" *ngIf="isQLND_03">
-      <div>{{'unit.email' | translate}}</div>
+      <div>{{'unit.email.name' | translate}}</div>
       <div class="input-line">
-        <input type="text" [(ngModel)]="email" class="input_text"/>
+        <input type="text" [(ngModel)]="nameOrEmail" class="input_text"/>
       </div>
     </div>
 
