mở phần BCT và timestamp

--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -149,7 +149,7 @@
         </div>
       </div>
 
-      <!-- <div class="row" style="padding-top: 10px">
+      <div class="row" style="padding-top: 10px">
         <div class="col-md-6">
           <div class="label_item">
             {{ "timestamp.used" | translate }}
@@ -167,9 +167,9 @@
             </span>
           </div>
         </div>
-      </div> -->
+      </div>
 
-      <!-- <div class="row" style="padding-top: 10px">
+      <div class="row" style="padding-top: 10px">
         <div class="col-md-6">
           <div class="label_item">
             {{ "ceca.used" | translate }}
@@ -187,7 +187,7 @@
             </span>
           </div>
         </div>
-      </div> -->
+      </div>
       
     </div>
 
