ký nhieu CTS & them ky cts cho van thu

--- a/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
+++ b/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
@@ -25,6 +25,17 @@
       </div>
     </div>
 
+    <!-- <div class="row" style="padding-top: 20px;">
+      <div class="col-md-12">
+        <div class="label text-color">{{'menu.organization.list' | translate}}</div>
+        <div>
+          <p-dropdown panelStyleClass="font" appendTo="body" [options]="orgList" formControlName="orgId"
+            optionLabel="name" optionValue="id" placeholder="Chọn tổ chức" [filter]="true" filterBy="name"
+            [showClear]="true" (onChange)="getData($event)" display="chip" #orgId></p-dropdown>
+        </div>
+      </div>
+    </div> -->
+
 
     <div class="row" style="padding-top: 20px;">
       <div class="col-md-12">
