--- a/src/app/main/digital-certificate/digital-certificate.component.html
+++ b/src/app/main/digital-certificate/digital-certificate.component.html
@@ -33,7 +33,7 @@
       </ng-template>
       <ng-template pTemplate="body" let-list>
           <tr>
-              <td>{{list.keyStoreFileName}}</td>
+              <td>{{list.keystoreSerialNumber}}</td>
               <td>{{list.keystoreDateStart | date:'dd/MM/yyyy HH:mm'}}</td>
               <td>{{list.keystoreDateEnd | date:'dd/MM/yyyy HH:mm'}}</td>
 
