--- a/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
+++ b/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
@@ -25,16 +25,23 @@
       </div>
     </div>
 
-    <!-- <div class="row" style="padding-top: 20px;">
+    <div class="row" style="padding-top: 20px;">
       <div class="col-md-12">
-        <div class="label text-color">{{'menu.organization.list' | translate}}</div>
+        <div class="label text-color">{{'menu.organization.list' | translate}}
+          <span class="required-title">*</span>
+        </div>
+
         <div>
           <p-dropdown panelStyleClass="font" appendTo="body" [options]="orgList" formControlName="orgId"
             optionLabel="name" optionValue="id" placeholder="Chọn tổ chức" [filter]="true" filterBy="name"
-            [showClear]="true" (onChange)="getData($event)" display="chip" #orgId></p-dropdown>
+            [showClear]="true" (onChange)="getListAllEmail($event)" style="height: 33px!important"></p-dropdown>
+        </div>
+        <div class="invalid" *ngIf="errorOrg">
+          {{errorOrg | translate}}
         </div>
       </div>
-    </div> -->
+
+    </div>
 
 
     <div class="row" style="padding-top: 20px;">
@@ -46,7 +53,7 @@
         <div>
           <p-multiSelect panelStyleClass="font" appendTo="body" [options]="emailList" formControlName="email"
             optionLabel="email" optionValue="email" placeholder="Chọn email" [filter]="true" filterBy="email"
-            [showClear]="true" (onFilter)="getListAllEmail($event)" display="chip" [multiple]="true"
+            [showClear]="true" (onFilter)="getListAllEmailOnFillter($event)" [multiple]="true"
             (onChange)="onSelectionChange()">
           </p-multiSelect>
         </div>
