--- a/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.scss
+++ b/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.scss
@@ -170,7 +170,7 @@
   .p-treeselect, .p-dropdown {
       border: 1px solid #106DB6;
       border-radius: 5px;
-      height: 55px;
+      // height: 55px;
       width: 100%;
       outline: 0;
       color: black !important;
