--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -12,10 +12,12 @@
           {{ "organization.me" | translate | uppercase }}&nbsp;<span style="color: red">*</span>
         </div>
         <input class="input1" type="text" [(ngModel)]="data_organization.name" />
-        <div style="width: 120px; margin-left: 5px">
+
+        <!--Ẩn luồng xử lý-->
+        <!-- <div style="width: 120px; margin-left: 5px">
           {{'hide.processing.thread' | translate}}
         </div>
-        <input type ="checkbox" [(ngModel)]="data_organization.hideFlow">
+        <input type ="checkbox" [(ngModel)]="data_organization.hideFlow"> -->
       </div>
 
       <div class="contract__content--participants">
@@ -719,10 +721,12 @@
         <input class="input1" type="text" placeholder="{{
             (item.type == 2 ? 'nhap_ten_doi_tac_to_chuc' : '') | translate
           }}" [(ngModel)]="item.name" [disabled]="item.type == 3" />
-          <div style="width: 120px; margin-left: 5px">
+
+          <!--Ẩn luồng xử lý-->
+          <!-- <div style="width: 120px; margin-left: 5px">
             {{'hide.processing.thread' | translate}}
           </div>
-          <input type ="checkbox" [(ngModel)]="item.hideFlow">
+          <input type ="checkbox" [(ngModel)]="item.hideFlow"> -->
       </div>
       <div *ngIf="this.dataParnterOrganization().length >= 1" style="display: flex; justify-content: flex-end">
         <u class="label text-color" (click)="deletePartner(id, item)"
