--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -14,10 +14,10 @@
         <input class="input1" type="text" [(ngModel)]="data_organization.name" />
 
         <!--Ẩn luồng xử lý-->
-        <div style="width: 120px; margin-left: 5px">
+        <!-- <div style="width: 120px; margin-left: 5px">
           {{'hide.processing.thread' | translate}}
         </div>
-        <input type ="checkbox" [(ngModel)]="data_organization.hideFlow">
+        <input type ="checkbox" [(ngModel)]="data_organization.hideFlow"> -->
       </div>
 
       <div class="contract__content--participants">
@@ -717,10 +717,12 @@
         <input class="input1" type="text" placeholder="{{
             (item.type == 2 ? 'nhap_ten_doi_tac_to_chuc' : '') | translate
           }}" [(ngModel)]="item.name" [disabled]="item.type == 3" />
-          <div style="width: 120px; margin-left: 5px">
+
+          <!--Ẩn luồng xử lý-->
+          <!-- <div style="width: 120px; margin-left: 5px">
             {{'hide.processing.thread' | translate}}
           </div>
-          <input type ="checkbox" [(ngModel)]="item.hideFlow">
+          <input type ="checkbox" [(ngModel)]="item.hideFlow"> -->
       </div>
 
       <div *ngIf="this.dataParnterOrganization().length >= 1" style="display: flex; justify-content: flex-end">
