--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
@@ -10,7 +10,7 @@
             [(ngModel)]='typeImageSignatureRadio' (change)="t(1)">
           <label for="radio-file-account" class="ms-2">File chữ ký từ tài khoản</label>
         </div>
-        <div class="radio-confirm">
+        <div *ngIf="!this.mobile" class="radio-confirm">
           <input id="radio-file-com" type="radio" name='choose-radio-signature' [value]="2"
             [(ngModel)]='typeImageSignatureRadio' (change)="t(2)">
           <label for="radio-file-com" class="ms-2">Tải file ảnh chữ ký</label>
