--- a/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
+++ b/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
@@ -32,9 +32,16 @@
         </div>
 
         <div>
-          <p-dropdown panelStyleClass="font" appendTo="body" [options]="orgList" formControlName="orgId"
-            optionLabel="name" optionValue="id" placeholder="Chọn tổ chức" [filter]="true" filterBy="name"
-            [showClear]="true" (onChange)="getListAllEmail($event)" style="height: 33px!important"></p-dropdown>
+          <p-treeSelect 
+            [(ngModel)]="selectedNodeOrganization"
+            formControlName="orgId"
+            [options]="listOrgCombobox" 
+            placeholder="{{'all' | translate}}" 
+            [filter]="true" 
+            filterBy="name"  
+            [droppable]="true" 
+            (onNodeSelect)="changeOrg()">
+          </p-treeSelect>
         </div>
         <div class="invalid" *ngIf="errorOrg">
           {{errorOrg | translate}}
@@ -51,10 +58,16 @@
         </div>
 
         <div>
-          <p-multiSelect panelStyleClass="font" appendTo="body" [options]="emailList" formControlName="email"
+          <p-multiSelect 
+            panelStyleClass="font" 
+            appendTo="body" 
+            [options]="emailList" 
+            formControlName="email"
             optionLabel="email" optionValue="email" placeholder="Chọn email" [filter]="true" filterBy="email"
             [showClear]="true" (onFilter)="getListAllEmailOnFillter($event)" [multiple]="true"
-            (onChange)="onSelectionChange()">
+            (onChange)="onSelectionChange()"
+            display="chip"
+            >
           </p-multiSelect>
         </div>
 
