Upadate giao diện, fix lại logic khi select org,email khi add/edit CTS

--- a/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
+++ b/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
@@ -39,7 +39,8 @@
             placeholder="{{'all' | translate}}" 
             [filter]="true" 
             filterBy="name"  
-            [droppable]="true" 
+            [droppable]="true"
+            value="data" 
             (onNodeSelect)="changeOrg()">
           </p-treeSelect>
         </div>
