--- a/src/app/main/digital-certificate/digital-certificate-edit/digital-certificate-edit.component.scss
+++ b/src/app/main/digital-certificate/digital-certificate-edit/digital-certificate-edit.component.scss
@@ -68,7 +68,7 @@
   .p-dropdown, .p-multiselect {
       border: 1px solid #106DB6;
       border-radius: 5px;
-      height: 33px;
+      // height: 33px;
       width: 100%;
       outline: 0;
       color: black !important;
@@ -186,7 +186,6 @@
   .p-treeselect, .p-dropdown {
       border: 1px solid #106DB6;
       border-radius: 5px;
-      height: 40px;
       width: 100%;
       outline: 0;
       color: black !important;
