--- a/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.scss
+++ b/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.scss
@@ -175,9 +175,9 @@
       outline: 0;
       color: black !important;
   }
-  .p-treeselect-label, .p-dropdown-label {
-      padding: 5px 5px 5px 15px;
-  }
+  // .p-treeselect-label, .p-dropdown-label {
+  //     padding: 5px 5px 5px 15px;
+  // }
 }
 .file-contract{
   height: 80px;
