ẩn giao diện số lượng timestamp

--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -149,7 +149,7 @@
         </div>
       </div>
 
-      <div class="row" style="padding-top: 10px">
+      <!-- <div class="row" style="padding-top: 10px">
         <div class="col-md-6">
           <div class="label_item">
             {{ "timestamp.used" | translate }}
@@ -167,7 +167,7 @@
             </span>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="row" style="padding-top: 10px">
         <div class="col-md-6">
