--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -115,7 +115,7 @@
         </div>
       </div>
       <div class="skeleton-sign position-absolute opacity-0">
-        <app-display-digital-signature [nameCompany]="nameCompany" [cardId]="cardId" [phonePKI]="phonePKI" [srcMark]="srcMark"></app-display-digital-signature>
+        <app-display-digital-signature [nameCompany]="nameCompany" [cardId]="cardId" [phonePKI]="phonePKI" [srcMark]="srcMark" [isDateTime]="isDateTime"></app-display-digital-signature>
       </div>
       <div class="skeleton-sign position-absolute opacity-0">
         <app-text-signature-image [font]="font" [font_size]="font_size" [datas]="datas" [textSign]="textSign" [width]="width"></app-text-signature-image>
