--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -3,12 +3,12 @@
     <div class="col-md-3" *ngIf="isQLND_03">
       <div>{{'unit.name' | translate}}</div>
       <div>
-          <p-treeSelect 
-            [(ngModel)]="selectedNodeOrganization" 
-            [options]="listOrgCombobox" 
-            placeholder="{{'all' | translate}}" 
-            [filter]="true" filterBy="name"  
-            [droppable]="true" 
+          <p-treeSelect
+            [(ngModel)]="selectedNodeOrganization"
+            [options]="listOrgCombobox"
+            placeholder="{{'all' | translate}}"
+            [filter]="true" filterBy="name"
+            [droppable]="true"
             (onNodeSelect)="changeOrg()">
           </p-treeSelect>
       </div>
@@ -17,7 +17,7 @@
     <div class="col-md-3" *ngIf="isQLND_03">
       <div>{{'unit.email.name' | translate}}</div>
       <div class="input-line">
-        <input type="text" [(ngModel)]="nameOrEmail" (input)="onInputChange($event)" class="input_text"/>
+        <input type="text" [(ngModel)]="nameOrEmail" class="input_text"/>
       </div>
     </div>
 
@@ -82,7 +82,7 @@
       </ng-template>
       <ng-template pTemplate="paginatorright" let-state>
         <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
-      </ng-template> 
+      </ng-template>
     </p-table>
   </div>
 
@@ -94,5 +94,4 @@
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
   <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
 </ngx-spinner>
- 
-  
+
