--- a/src/app/main/digital-certificate/digital-certificate.component.html
+++ b/src/app/main/digital-certificate/digital-certificate.component.html
@@ -7,9 +7,9 @@
       </div>
     </div>
     <div class="col-md-3" *ngIf="isQLDC_03">
-      <div>{{'file.name' | translate}}</div>
+      <div>{{'subject' | translate}}</div>
       <div class="input-line">
-        <input type="text" [(ngModel)]="fileName" class="input_text"/>
+        <input type="text" [(ngModel)]="subjectSearch" class="input_text"/>
       </div>
     </div>
     <div class="col-md-3" *ngIf="isQLDC_03">
@@ -40,7 +40,7 @@
       <ng-template pTemplate="body" let-list>
           <tr>
               <td>{{list.keystoreSerialNumber}}</td>
-              <td>{{list.keyStoreFileName}}</td>
+              <td>{{getValueByKey(list.certInformation, "CN")}}</td>
               <td>{{list.keystoreDateStart | date:'dd/MM/yyyy HH:mm'}}</td>
               <td>{{list.keystoreDateEnd | date:'dd/MM/yyyy HH:mm'}}</td>
 
