thêm version vào footer

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -134,7 +134,7 @@
     </div>
 
     <div class="content_footer">
-        <div>@Copyright 2022 - MobiFone</div>
+        <div>@Copyright 2023 - MobiFone | v20230728</div>
     </div>
   </main>
 </div>
