--- a/src/app/main/contract-signature/components/consider-contract/ekyc-dialog-sign/ekyc-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/ekyc-dialog-sign/ekyc-dialog-sign.component.html
@@ -10,9 +10,9 @@
   </div>
 
   <div *ngIf = "!webcamImage && !this.flagSuccess && this.title!=1">
-    <webcam class="webcam-image" style="border-radius: 10px" [width]="this.width*0.85" [height]="this.width*0.85*3/4" [trigger]="triggerObservable" (imageCapture)="handleImage($event)" *ngIf="showWebcam"
+    <webcam class="webcam-image" style="border-radius: 10px" [width]="this.width*0.85" [height]="this.width*0.85" [trigger]="triggerObservable" (imageCapture)="handleImage($event)" *ngIf="showWebcam"
             [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable"
-            [videoOptions]="{ width: {exact: 480}, height: {exact: 640}, facingMode: 'environment'}" 
+            [videoOptions]="{ width: {exact: 640}, height: {exact: 640}, facingMode: 'environment'}" 
             [imageQuality]="1"
             (cameraSwitched)="cameraWasSwitched($event)"
             (initError)="handleInitError($event)"
