--- a/src/app/main/contract-signature/components/consider-contract/ekyc-dialog-sign/ekyc-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/ekyc-dialog-sign/ekyc-dialog-sign.component.html
@@ -46,7 +46,7 @@
     <img src="../../../../../../assets/img/cancel-circle.svg" (click)="this.webcamImage = this.initWebcamImage;" class="icon-cancel">
   </div>
   <div  *ngIf="webcamImage && this.title==1" class="webcam-image-circle">
-    <img class="img-face" [height]="this.width*0.7*4/3" [width]="this.width*0.7" [src]="webcamImage.imageAsDataUrl"/>
+    <img class="img-face" [height]="this.width*0.7" [width]="this.width*0.7" [src]="webcamImage.imageAsDataUrl"/>
   </div>
   <div *ngIf="webcamImage && this.title==1" class="button-camera">    
     <img src="../../../../../../assets/img/check-circle.svg" (click)="confirmData();" class="icon-check" >
