fix loading ky nhieu cts

--- a/src/app/main/digital-certificate/digital-certificate.component.html
+++ b/src/app/main/digital-certificate/digital-certificate.component.html
@@ -9,7 +9,7 @@
     <div class="col-md-3" *ngIf="isQLDC_03">
       <div>{{'subject' | translate}}</div>
       <div class="input-line">
-        <input type="text" [(ngModel)]="subjectSearch" class="input_text"/>
+        <input type="text" [(ngModel)]="subject" class="input_text"/>
       </div>
     </div>
     <div class="col-md-3" *ngIf="isQLDC_03">
